managed/apps/tw/components/api/base/deploy-api-api.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-api
  namespace: tw
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  selector:
    matchLabels:
      app: tw
      component: api
      container: api
  replicas: 2
  template:
    metadata:
      labels:
        app: tw
        component: api
        container: api
    spec:
      containers:
        - name: api
          image: gcr.io/tf-ops-cicd-97aadd/tw/api/main/api:latest
          imagePullPolicy: Always
          ports: 
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 30
            successThreshold: 1
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 12
            successThreshold: 1
          volumeMounts:
      volumes:
      imagePullSecrets:
        - name: image-pull-secret
