managed/apps/tw/components/api/base/deploy-api-database.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-database
  namespace: tw
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  selector:
    matchLabels:
      app: tw
      component: api
      container: database
  replicas: 1
  template:
    metadata:
      labels:
        app: tw
        component: api
        container: database
    spec:
      containers:
        - name: database
          image: mongo:3.6.23
          imagePullPolicy: Always
          ports: 
            - containerPort: 27017
          
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
          volumeMounts:
            - mountPath: "/etc/secrets/mongo"
              name: mongo
              readOnly: true
      volumes:
        - name: mongo
          secret:
            secretName: api-database-mongo
      imagePullSecrets:
        - name: image-pull-secret
